--- a/social_media.html
+++ b/social_media.html
@@ -47,7 +47,7 @@
         </a>
       </div>
       <div class="social-link">
-        <a href="https://facebook.com/AndrewOldnall">
+        <a href="https://facebook.com/AndyOldnall">
           <img src="Images/2021_Facebook_icon.svg.png" alt="Facebook" />
           @AndrewOldnall
         </a>
