--- a/social_media.html
+++ b/social_media.html
@@ -49,7 +49,7 @@
       <div class="social-link">
         <a href="https://facebook.com/AndyOldnall">
           <img src="Images/2021_Facebook_icon.svg.png" alt="Facebook" />
-          @AndrewOldnall
+          @AndyOldnall
         </a>
       </div>
     </section>
