--- a/current_work.html
+++ b/current_work.html
@@ -29,6 +29,8 @@
         <a href="https://raw.githubusercontent.com/AndrewOldnall/AndrewOldnall.github.io/master/EGO_Script" target="_blank"
           >here</a
         >
+        And my results in excel format can be found <a href="https://github.com/AndrewOldnall/AndrewOldnall.github.io/raw/master/Ego_Document_2mv.xlsx" target="_blank"
+        >here</a
       </p>
     </section>
 
