--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         Attached is my results gathered from the creation of my attempt at a
         Green Fuzzy Finder Algorithm.
         <a href="almagal_physicalParameters.xlsx" download
-          >Dowload Excel File</a
+          >Download Excel File</a
         >
       </p>
     </section>
