--- a/index.html
+++ b/index.html
@@ -48,6 +48,10 @@
 
     <section id="section2">
       <h2>Please feel free to check out my other pages.</h2>
+      <img
+        src="https://tryhackme-badges.s3.amazonaws.com/AndyOldnall.png"
+        alt="Your Image Badge"
+      />
     </section>
     <footer>
       <p>Andrew Oldnall</p>
